fix covered methods sidebar, remove tests count

--- a/src/pages/agent-full-page/coverage-plugin/test-details/methods-list/methods-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/methods-list/methods-list.module.scss
@@ -42,6 +42,7 @@
   &__method-info {
     display: flex;
     flex-direction: column;
+    width: calc(100% - 70px);
   }
 
   &__method-package {
